# opencal-lib-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  README.rst  environment.yml  init-skeleton.sh  meta.make  meta.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  setup.py
docs/: conf.py  developer.rst  index.rst
examples/: README.txt
opencal/: __init__.py  card.py  config.py  review.py
opencal/core/: data.py  tags.py
opencal/core/professor/: alice.py  ben.py  professor.py
opencal/core/professor/acquisition/: arthur.py  baptiste.py  charles.py  denis.py  ernest.py  professor.py  ralph.py  randy.py
opencal/core/professor/acquisition/tests/: test_randy.py
opencal/core/professor/consolidation/: alice.py  berenice.py  brutus.py  celia.py  doreen.py
opencal/core/professor/consolidation/tests/: test_alice.py  test_berenice.py  test_celia.py  test_doreen.py
opencal/core/professor/itm/: __init__.py  alice.py  arthur.py  baptiste.py  charles.py  denis.py  ernest.py  ralph.py  randy.py
opencal/core/professor/itm/tests/: test_alice.py  test_randy.py
opencal/core/professor/ltm/: __init__.py  alice.py  berenice.py  brutus.py  celia.py  doreen.py
opencal/core/professor/ltm/tests/: test_alice.py  test_ben.py  test_berenice.py  test_celia.py  (+1 more)
opencal/core/professor/tests/: test_alice.py  test_ben.py
opencal/io/: pkb.py  sqlitedb.py
opencal/io/tests/: test_pkb.py
tools/: backup.py  backup_sqlite_db.py  check_xml_to_sqlite_to_xml.py  dump.py  dump_sqlite_db.py  init_db.py  restore_sqlite_db.py  sqlitedb_to_xml.py  xml_to_sqlitedb.py
